--- a/employee_system_frontend/package.json
+++ b/employee_system_frontend/package.json
@@ -1,17 +1,26 @@
 {
-  "name": "react-kavia",
-  "version": "0.1.0",
+  "name": "employee-system-frontend",
+  "version": "1.0.0",
   "private": true,
   "dependencies": {
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-scripts": "^5.0.1"
+    "react-router-dom": "^6.26.1",
+    "react-scripts": "^5.0.1",
+    "redux": "^4.2.1",
+    "react-redux": "^8.1.3",
+    "reselect": "^5.1.1",
+    "axios": "^1.7.7",
+    "date-fns": "^3.6.0",
+    "recharts": "^2.12.7",
+    "classnames": "^2.5.1"
   },
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
-    "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "test": "react-scripts test --watchAll=false",
+    "eject": "react-scripts eject",
+    "lint": "eslint ."
   },
   "eslintConfig": {
     "extends": "react-app"
