--- a/employee_system_frontend/package.json
+++ b/employee_system_frontend/package.json
@@ -3,17 +3,17 @@
   "version": "1.0.0",
   "private": true,
   "dependencies": {
+    "axios": "^1.7.7",
+    "classnames": "^2.5.1",
+    "date-fns": "^3.6.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-redux": "^8.1.3",
     "react-router-dom": "^6.26.1",
     "react-scripts": "^5.0.1",
-    "redux": "^4.2.1",
-    "react-redux": "^8.1.3",
-    "reselect": "^5.1.1",
-    "axios": "^1.7.7",
-    "date-fns": "^3.6.0",
     "recharts": "^2.12.7",
-    "classnames": "^2.5.1"
+    "redux": "^4.2.1",
+    "reselect": "^5.1.1"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -38,6 +38,10 @@
     ]
   },
   "devDependencies": {
-    "cross-env": "^7.0.3"
+    "@testing-library/jest-dom": "^6.8.0",
+    "@testing-library/react": "^14.3.1",
+    "@testing-library/user-event": "^14.6.1",
+    "cross-env": "^7.0.3",
+    "jest-environment-jsdom": "^30.1.1"
   }
 }
